--- a/Dataset/twi22/dp21_twi22user_geo.ipynb
+++ b/Dataset/twi22/dp21_twi22user_geo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "1be7cf7e",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fa7a5ce2",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 15,
    "id": "fe57dad3",
    "metadata": {},
    "outputs": [
@@ -122,16 +122,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Check num of edges:  (2, 1356282)\n",
-      "Num of user selected:  195491\n"
+      "Check num of edges:  (2, 800554)\n",
+      "Num of user selected:  157029\n"
      ]
     }
    ],
    "source": [
     "# example: network in topic 3\n",
-    "tweet = pd.read_csv('topic_tweet1_covid.csv')\n",
-    "#tweet = pd.read_csv('topic_tweet2_war.csv') \n",
-    "#tweet = pd.read_csv('topic_tweet3_climate.csv') \n",
+    "#tweet = pd.read_csv('twi22/processed/topic_tweet1_covid.csv')\n",
+    "tweet = pd.read_csv('twi22/processed/topic_tweet2_war.csv') \n",
+    "#tweet = pd.read_csv('twi22/processed/topic_tweet3_climate.csv') \n",
     "\n",
     "followers = pd.read_csv('followers.csv')\n",
     "following = pd.read_csv('following.csv')\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "id": "df54931d",
    "metadata": {},
    "outputs": [
@@ -176,8 +176,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num nodes:  195491 Num edges:  1341914\n",
-      "Num nodes:  195491 Num edges:  1341914\n"
+      "Num nodes:  157029 Num edges:  796236\n",
+      "Num nodes:  157029 Num edges:  796236\n"
      ]
     }
    ],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 17,
    "id": "ed85fa96",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 18,
    "id": "03de0713",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 19,
    "id": "0c9b61f3",
    "metadata": {},
    "outputs": [],
@@ -274,21 +274,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 22,
    "id": "72941e80",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Human following Human:  0.6041523804723826\n",
-      "Human following Bot:  0.5652196471497054\n",
-      "Human following Human:  0.820962757022726\n",
-      "Bot following Human:  0.7422882747678006\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "-> follow关系\n",
@@ -348,22 +337,38 @@
     "        homo_rate.append(rate)\n",
     "    return homo_rate\n",
     "\n",
-    "hfh_homo = cal_homo_rate(G_HfollowingH)\n",
-    "hfb_homo = cal_homo_rate(G_HfollowingB)\n",
+    "# hfh_homo = cal_homo_rate(G_HfollowingH)\n",
+    "# hfb_homo = cal_homo_rate(G_HfollowingB)\n",
     "\n",
-    "hfh_neighomo = cal_neighomo_rate(G_HfollowingH)\n",
-    "bfh_neighomo = cal_neighomo_rate(G_BfollowingH)\n",
+    "# hfh_neighomo = cal_neighomo_rate(G_HfollowingH)\n",
+    "# bfh_neighomo = cal_neighomo_rate(G_BfollowingH)\n",
     "\n",
-    "print(\"Human following Human: \", np.mean(hfh_homo))\n",
-    "print(\"Human following Bot: \", np.mean(hfb_homo))\n",
+    "hfbyh_homo = cal_homo_rate(G_HfollowingH.reverse())\n",
+    "bfbyh_homo = cal_homo_rate(G_HfollowingB.reverse())\n",
+    "hfbyb_homo = cal_homo_rate(G_BfollowingH.reverse())\n",
     "\n",
-    "print(\"Human following Human: \", np.mean(hfh_neighomo))\n",
-    "print(\"Bot following Human: \", np.mean(bfh_neighomo))"
+    "hfbyh_neighomo = cal_neighomo_rate(G_HfollowingH.reverse())\n",
+    "bfbyh_neighomo = cal_neighomo_rate(G_HfollowingB.reverse())\n",
+    "\n",
+    "# print(\"Human following Human: \", np.mean(hfh_homo))\n",
+    "# print(\"Human following Bot: \", np.mean(hfb_homo))\n",
+    "\n",
+    "# print(\"Human following Human: \", np.mean(hfh_neighomo))\n",
+    "# print(\"Bot following Human: \", np.mean(bfh_neighomo))\n",
+    "\n",
+    "# focal-neighbor\n",
+    "print(\"Human followed by Human: \", np.mean(hfbyh_homo))\n",
+    "print(\"Bot followed by Human: \", np.mean(bfbyh_homo))\n",
+    "print(\"Human followed by Human: \", np.mean(hfbyh_homo))\n",
+    "\n",
+    "# neighbors\n",
+    "print(\"Human followed by Human: \", np.mean(hfbyh_neighomo))\n",
+    "print(\"Bot followed by Human: \", np.mean(bfbyh_neighomo))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "85c20f1c",
    "metadata": {},
    "outputs": [
@@ -371,19 +376,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test homo: t= 6.703095420782976  ,p= 2.07204713567771e-11\n",
-      "test neighomo: t= 23.85766324021434  ,p= 1.955294244694884e-124\n"
+      "test homo: t= 1.6584062251588976  ,p= 0.09726432690373948\n",
+      "test neighomo: t= 16.60143730480592  ,p= 8.044359067688275e-61\n",
+      "test homo: t= 1.6584062251588976  ,p= 0.09726432690373948\n",
+      "test neighomo: t= 21.385356657549004  ,p= 1.7775808677827884e-98\n"
      ]
     }
    ],
    "source": [
     "# t test\n",
     "from scipy import stats\n",
-    "t1, p1 = stats.ttest_ind(hfh_homo, hfb_homo)\n",
-    "t2, p2 = stats.ttest_ind(hfh_neighomo, bfh_neighomo)\n",
+    "# t1, p1 = stats.ttest_ind(hfh_homo, hfb_homo)\n",
+    "# t2, p2 = stats.ttest_ind(hfh_neighomo, bfh_neighomo)\n",
+    "t3, p3 = stats.ttest_ind(hfbyh_homo, bfbyh_homo)\n",
+    "t4, p4 = stats.ttest_ind(hfbyh_neighomo, bfbyh_neighomo)\n",
+    "t5, p5 = stats.ttest_ind(hfbyh_homo, hfbyb_homo)\n",
     "\n",
-    "print(\"test homo: t=\", t1, \" ,p=\", p1)\n",
-    "print(\"test neighomo: t=\", t2, \" ,p=\", p2)"
+    "# print(\"test homo: t=\", t1, \" ,p=\", p1)\n",
+    "# print(\"test neighomo: t=\", t2, \" ,p=\", p2)\n",
+    "print(\"test homo: t=\", t3, \" ,p=\", p3)\n",
+    "print(\"test neighomo: t=\", t4, \" ,p=\", p4)"
    ]
   }
  ],
