--- a/empirical+vis.ipynb
+++ b/empirical+vis.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# topic 1 pos\n",
@@ -232,7 +232,8 @@
      "text": [
       "Treat (bot prop):  0.20524876543209897\n",
       "Control (human prop):  0.14865584072878865\n",
-      "Num treat/control:  1782 59496\n"
+      "Num treat/control:  1782 59496\n",
+      "0.0001273302100188198\n"
      ]
     }
    ],
@@ -240,7 +241,11 @@
     "# average opinion\n",
     "print(\"Treat (bot prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
     "print(\"Control (human prop): \", analysis[analysis['Treat']==1]['outcome'].mean())\n",
-    "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))"
+    "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))\n",
+    "\n",
+    "from scipy import stats\n",
+    "t_stats, p_value = stats.ttest_ind(analysis[analysis['Treat']==-1]['outcome'], analysis[analysis['Treat']==1]['outcome'])\n",
+    "print(p_value)"
    ],
    "metadata": {
     "collapsed": false,
@@ -284,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# topic 1 neg\n",
@@ -327,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -335,7 +340,8 @@
      "text": [
       "Treat (bot prop):  0.003165189189189204\n",
       "Control (human prop):  0.06156433421129566\n",
-      "Num treat/control:  925 34170\n"
+      "Num treat/control:  925 34170\n",
+      "0.005869790983855077\n"
      ]
     }
    ],
@@ -343,7 +349,10 @@
     "# average opinion\n",
     "print(\"Treat (bot prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
     "print(\"Control (human prop): \",analysis[analysis['Treat']==1]['outcome'].mean())\n",
-    "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))"
+    "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))\n",
+    "from scipy import stats\n",
+    "t_stats, p_value = stats.ttest_ind(analysis[analysis['Treat']==-1]['outcome'], analysis[analysis['Treat']==1]['outcome'])\n",
+    "print(p_value)"
    ],
    "metadata": {
     "collapsed": false,
@@ -354,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# topic 2 pos\n",
@@ -397,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -405,7 +414,8 @@
      "text": [
       "Treat (bot prop):  -0.08393858974358975\n",
       "Control (human prop):  -0.1126987842541295\n",
-      "Num treat/control:  780 20399\n"
+      "Num treat/control:  780 20399\n",
+      "0.26333418547137216\n"
      ]
     }
    ],
@@ -413,7 +423,10 @@
     "# average opinion\n",
     "print(\"Treat (bot prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
     "print(\"Control (human prop): \",analysis[analysis['Treat']==1]['outcome'].mean())\n",
-    "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))"
+    "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))\n",
+    "from scipy import stats\n",
+    "t_stats, p_value = stats.ttest_ind(analysis[analysis['Treat']==-1]['outcome'], analysis[analysis['Treat']==1]['outcome'])\n",
+    "print(p_value)"
    ],
    "metadata": {
     "collapsed": false,
@@ -457,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# topic 2 neg\n",
@@ -508,7 +521,8 @@
      "text": [
       "Treat (bot prop):  -0.26813522267206474\n",
       "Control (human prop):  -0.1750625938364274\n",
-      "Num treat/control:  494 30372\n"
+      "Num treat/control:  494 30372\n",
+      "0.003695952596172539\n"
      ]
     }
    ],
@@ -516,7 +530,10 @@
     "# average opinion\n",
     "print(\"Treat (bot prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
     "print(\"Control (human prop): \",analysis[analysis['Treat']==1]['outcome'].mean())\n",
-    "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))"
+    "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))\n",
+    "from scipy import stats\n",
+    "t_stats, p_value = stats.ttest_ind(analysis[analysis['Treat']==-1]['outcome'], analysis[analysis['Treat']==1]['outcome'])\n",
+    "print(p_value)"
    ],
    "metadata": {
     "collapsed": false,
@@ -527,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "# topic 3 pos\n",
@@ -535,7 +552,7 @@
     "treat_indicator = np.load('Dataset/twi22/t3/t3_pos_T_label.npy')\n",
     "outcome = np.load('Dataset/twi22/t3/t3_pos_y.npy')\n",
     "prop_label = np.load('Dataset/twi22/t3/t3_pos_prop_label.npy')\n",
-    "analysis = pd.DataFrame({'Label': bot_label, 'prop': prop_label, 'Treat': treat_indicator, 'outcome': outcome})"
+    "analysis = pd.DataFrame({'Label': bot_label, 'prop': prop_label, 'Treat': treat_indicator, 'outcome': outcome})\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -570,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -578,7 +595,8 @@
      "text": [
       "Treat (bot prop):  0.1537042813455658\n",
       "Control (human prop):  0.21751235379235387\n",
-      "Num treat/control:  327 16586\n"
+      "Num treat/control:  327 16586\n",
+      "0.06580717708129255\n"
      ]
     }
    ],
@@ -586,7 +604,10 @@
     "# average opinion\n",
     "print(\"Treat (bot prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
     "print(\"Control (human prop): \",analysis[analysis['Treat']==1]['outcome'].mean())\n",
-    "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))"
+    "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))\n",
+    "from scipy import stats\n",
+    "t_stats, p_value = stats.ttest_ind(analysis[analysis['Treat']==-1]['outcome'], analysis[analysis['Treat']==1]['outcome'])\n",
+    "print(p_value)"
    ],
    "metadata": {
     "collapsed": false,
@@ -630,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "# topic 3 neg\n",
@@ -673,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -681,7 +702,8 @@
      "text": [
       "Treat (bot prop):  0.19528724035608303\n",
       "Control (human prop):  0.11887295113019326\n",
-      "Num treat/control:  337 7919\n"
+      "Num treat/control:  337 7919\n",
+      "0.0288142427059119\n"
      ]
     }
    ],
@@ -689,7 +711,10 @@
     "# average opinion\n",
     "print(\"Treat (bot prop): \", analysis[analysis['Treat']==-1]['outcome'].mean())\n",
     "print(\"Control (human prop): \", analysis[analysis['Treat']==1]['outcome'].mean())\n",
-    "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))"
+    "print(\"Num treat/control: \", len(analysis[analysis['Treat']==-1]), len(analysis[analysis['Treat']==1]))\n",
+    "from scipy import stats\n",
+    "t_stats, p_value = stats.ttest_ind(analysis[analysis['Treat']==-1]['outcome'], analysis[analysis['Treat']==1]['outcome'])\n",
+    "print(p_value)"
    ],
    "metadata": {
     "collapsed": false,
@@ -700,14 +725,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t统计量: 3.441549403260464\n",
-      "p值: 0.002910779896379889\n"
+      "t统计量: -1.837101508347152\n",
+      "p值: 0.06621788209919655\n"
      ]
     }
    ],
@@ -716,11 +741,11 @@
     "import numpy as np\n",
     "\n",
     "# 给定两组数据的均值和标准差\n",
-    "mean1, mean2 = 0.6044, 0.6027\n",
-    "std1, std2 = 0.0010, 0.0012\n",
+    "mean1, mean2 = 0.1537, 0.2175\n",
+    "std1, std2 = 0.62, 0.62\n",
     "\n",
     "# 给定样本大小\n",
-    "n1, n2 = 10, 10\n",
+    "n1, n2 = 327, 12586\n",
     "\n",
     "# 计算自由度\n",
     "df = n1 + n2 - 2\n",
