--- a/empirical+vis.ipynb
+++ b/empirical+vis.ipynb
@@ -1121,6 +1121,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quality Pos (BotInf&HumanInf):  1.99169655031631 2.8573179531636237\n",
+      "0.1516851738787197\n"
+     ]
+    }
+   ],
+   "source": [
+    "# other metric\n",
+    "def eval_func(data):\n",
+    "    return (data['mentioned'])/(data['followers'])\n",
+    "\n",
+    "botD = pd.read_csv('Dataset/twi22/influencers/t3_neg_botInfluencer.csv')\n",
+    "humanD = pd.read_csv('Dataset/twi22/influencers/t3_neg_humanInfluencer.csv')\n",
+    "\n",
+    "botD, humanD = botD[botD['followers']>0], humanD[humanD['followers']>0]\n",
+    "impbot, imphuman = eval_func(botD), eval_func(humanD)\n",
+    "\n",
+    "print(\"Quality Pos (BotInf&HumanInf): \", np.mean(impbot), np.mean(imphuman))\n",
+    "_, p_value = stats.ttest_ind(impbot, imphuman)\n",
+    "print(p_value)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "outputs": [
     {
