--- a/empirical+vis.ipynb
+++ b/empirical+vis.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# topic 1 pos\n",
@@ -191,6 +191,29 @@
     "outcome = np.load('Dataset/twi22/t1/t1_pos_y.npy')\n",
     "prop_label = np.load('Dataset/twi22/t1/t1_pos_prop_label.npy')\n",
     "analysis = pd.DataFrame({'Label': bot_label, 'prop': prop_label, 'Treat': treat_indicator, 'outcome': outcome})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Postive:  98574 Negative:  65804\n"
+     ]
+    }
+   ],
+   "source": [
+    "# proportion of opinion\n",
+    "print(\"Postive: \", len(analysis[analysis['outcome']>0]), \"Negative: \", len(analysis[analysis['outcome']<0]))"
    ],
    "metadata": {
     "collapsed": false,
@@ -364,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# topic 2 pos\n",
@@ -373,6 +396,29 @@
     "outcome = np.load('Dataset/twi22/t2/t2_pos_y.npy')\n",
     "prop_label = np.load('Dataset/twi22/t2/t2_pos_prop_label.npy')\n",
     "analysis = pd.DataFrame({'Label': bot_label, 'prop': prop_label, 'Treat': treat_indicator, 'outcome': outcome})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Postive:  59156 Negative:  81507\n"
+     ]
+    }
+   ],
+   "source": [
+    "# proportion of opinion\n",
+    "print(\"Postive: \", len(analysis[analysis['outcome']>0]), \"Negative: \", len(analysis[analysis['outcome']<0]))"
    ],
    "metadata": {
     "collapsed": false,
