--- a/Dataset/twi22/dp23_twi22Influencer_analysis.ipynb
+++ b/Dataset/twi22/dp23_twi22Influencer_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1be7cf7e",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
    "id": "96625944",
    "metadata": {},
    "source": [
-    "## Analyzing the Influence Receivers"
+    "## 1. Analyzing the Influence Receivers"
    ]
   },
   {
@@ -246,7 +246,7 @@
    "id": "ab22b449",
    "metadata": {},
    "source": [
-    "## Analyzing the Influencers"
+    "## 2. Analyzing the Influencers"
    ]
   },
   {
@@ -409,27 +409,27 @@
    "id": "4476ef49",
    "metadata": {},
    "source": [
-    "## Influencers' tweet"
+    "## 3. Influencers' tweet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "6bb6ff50",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save their tweet example\n",
-    "# inf_id = pd.read_csv('twi22/influencers/t1_pos_botinfluencer.csv')\n",
+    "# inf_id = pd.read_csv('twi22/influencers/t1_neg_botinfluencer.csv')\n",
     "# tweet = pd.read_csv('twi22/processed/topic_tweet1_covid.csv')\n",
-    "# inf_id = pd.read_csv('twi22/influencers/t2_pos_botinfluencer.csv')\n",
+    "# inf_id = pd.read_csv('twi22/influencers/t2_neg_botinfluencer.csv')\n",
     "# tweet = pd.read_csv('twi22/processed/topic_tweet2_war.csv')\n",
-    "# inf_id = pd.read_csv('twi22/influencers/t3_pos_botinfluencer.csv')\n",
+    "# inf_id = pd.read_csv('twi22/influencers/t3_neg_botinfluencer.csv')\n",
     "# tweet = pd.read_csv('twi22/processed/topic_tweet3_climate.csv')\n",
     "\n",
     "# tweet['uid'] = 'u'+tweet['uid'].astype(str)\n",
     "# tweet_inf = pd.merge(inf_id, tweet, left_on='id', how='inner', right_on='uid')[['uid', 'tweet']]\n",
-    "# tweet_inf.to_csv('t1_pos_bot_tweet.csv', index=False)"
+    "# tweet_inf.to_csv('t3_neg_bot_tweet.csv', index=False)"
    ]
   },
   {
@@ -437,7 +437,7 @@
    "id": "297dcc35",
    "metadata": {},
    "source": [
-    "## Influencers' Attitude Varaiances"
+    "## 4. Influencers' Attitude Variances"
    ]
   },
   {
@@ -519,7 +519,7 @@
    "id": "577aaa68",
    "metadata": {},
    "source": [
-    "## Tweets Text Analysis"
+    "## 5. Tweets Text Analysis"
    ]
   },
   {
@@ -529,6 +529,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 5.1 Key symbols in the text\n",
+    "\n",
     "b_inf_id10 = pd.read_csv('twi22/influencers/t1_pos_botinfluencer.csv')['id'].to_list()\n",
     "h_inf_id10 = pd.read_csv('twi22/influencers/t1_pos_humaninfluencer.csv')['id'].to_list()\n",
     "b_inf_id11 = pd.read_csv('twi22/influencers/t1_neg_botinfluencer.csv')['id'].to_list()\n",
@@ -35438,6 +35440,7 @@
     }
    ],
    "source": [
+    "# 5.2 Count of Keywords\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from collections import Counter\n",
@@ -35462,7 +35465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# analysis of bot influencers\n",
+    "# 5.3 topic modeling\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.decomposition import LatentDirichletAllocation\n",
     "\n",
